--- a/Assets/NatsunekoLaboratory/uMCP/NatsunekoLaboratory.uMCP.asmdef
+++ b/Assets/NatsunekoLaboratory/uMCP/NatsunekoLaboratory.uMCP.asmdef
@@ -11,7 +11,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "NatsunekoLaboratory.uMCP.Newtonsoft.Json.dll"
+        "Newtonsoft.Json.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
