--- a/Assets/NatsunekoLaboratory/uMCP/package.json
+++ b/Assets/NatsunekoLaboratory/uMCP/package.json
@@ -1,7 +1,10 @@
 {
   "name": "com.natsuneko.u-mcp",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "displayName": "uMCP",
   "description": "uMCP is a server implementation of the MCP protocol, designed for working with the AI in Unity.",
-  "unity": "6000.0"
+  "unity": "2022.3",
+  "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.2.1"
+  }
 }
